--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,7 +14,7 @@ run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 # ===================
 
 # Key combination prefix is <C-a>, not <C-b>
-set-option -g prefix C-a
+set-option -g prefix `
 unbind-key C-b
 
 # use <C-a><C-a> to switch window,
