--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
 
+[submodule "fzf"]
+	path = fzf
+	url = https://github.com/junegunn/fzf.git
