--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 ## Setup Powerline for TMUX
-source /home/karthik/.local/lib/python3.6/site-packages/powerline/bindings/tmux
+source "$TMUX_POWERLINE_BIN"
 # Users/stark/anaconda2/envs/major/lib/python3.6/site-packages/powerline/bindings/tmux"
 run-shell "powerline-daemon -q"
 run-shell "powerline-config tmux setup"
